# mcp-backpack

./: .gitignore  CLAUDE.md  README.md  backpack.json  main.py  pyproject.toml
.backpack_memory/: cache.db
.claude/: settings.local.json
docs/: App.tsx  CNAME  README.md  index.html  metadata.json  package.json
docs/components/: FeatureCard.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallationBlock.tsx
src/mcp_backpack/: server.py
tests/: test_server.py
